[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://scripts/exporter.gd" type="Script" id=2]
[ext_resource path="res://scripts/Editor.gd" type="Script" id=3]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=4]
[ext_resource path="res://assets/models/wireframe.obj" type="ArrayMesh" id=5]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=6]

[sub_resource type="QuadMesh" id=4]
size = Vector2( 2, 2 )

[sub_resource type="Shader" id=5]
code = "shader_type spatial;
render_mode unshaded, blend_mix, depth_draw_never, depth_test_disable;

/*
	AUTHOR: Hannah \"EMBYR\" Crawford
	ENGINE_VERSION: 4.0.3
	
	HOW TO USE:
		1. Create a MeshInstance3D node and place it in your scene.
		2. Set it's size to 2x2.
		3. Enable the \"Flip Faces\" option.
		4. Create a new shader material with this shader.
		5. Assign the material to the MeshInstance3D
	
	LIMITATIONS:
		Does not work well with TAA enabled.
	
	MOBILE_NOTES:
		The mobile renderer does not have access to the normal_roughness texture
		so we must rely on techniques to reconstruct this information from the
		depth buffer.
		
		If you require support on mobile please uncomment the SUPPORT_MOBILE line
		below. I have done my best to match the appearance between the two modes
		however, mobile does not take into account smooth-shaded faces.
		
		The high-quality reconstruction method used on mobile is rather heavy on
		texture samples. If you would like to use the lower-quality recontruction
		method for better performance, please uncomment the NAIVE_NORMAL_RECONSTRUCTION
		line below.
*/
//#define SUPPORT_MOBILE
//#define NAIVE_NORMAL_RECONSTRUCTION

uniform vec4 outlineColor: hint_color = vec4(0.0, 0.0, 0.0, 0.78);
uniform float depth_threshold = 0.025;
uniform float normal_threshold : hint_range(0.0, 1.5) = 0.5;
uniform float normal_smoothing : hint_range(0.0, 1.0) = 0.25;

uniform float max_thickness: hint_range(0.0, 5.0) = 1.3;
uniform float min_thickness = 0.5;
uniform float max_distance = 75.0;
uniform float min_distance = 2.0;

uniform float grazing_fresnel_power = 5.0;
uniform float grazing_angle_mask_power = 1.0;
uniform float grazing_angle_modulation_factor = 50.0;






varying flat mat4 model_view_matrix;


struct UVNeighbors {
	vec2 center; 
	vec2 left;     vec2 right;     vec2 up;          vec2 down;
	vec2 top_left; vec2 top_right; vec2 bottom_left; vec2 bottom_right;
};

struct NeighborDepthSamples {
	float c_d; 
	float l_d;  float r_d;  float u_d;  float d_d; 
	float tl_d; float tr_d; float bl_d; float br_d;
};

UVNeighbors getNeighbors(vec2 center, float width, float aspect) {
	vec2 h_offset = vec2(width * aspect * 0.001, 0.0);
	vec2 v_offset = vec2(0.0, width * 0.001);
	UVNeighbors n;
	n.center = center;
	n.left   = center - h_offset;
	n.right  = center + h_offset;
	n.up     = center - v_offset;
	n.down   = center + v_offset;
	n.top_left     = center - (h_offset - v_offset);
	n.top_right    = center + (h_offset - v_offset);
	n.bottom_left  = center - (h_offset + v_offset);
	n.bottom_right = center + (h_offset + v_offset);
	return n;
}

float getMinimumDepth(NeighborDepthSamples ds){
	return min(ds.c_d, min(ds.l_d, min(ds.r_d, min(ds.u_d, min(ds.d_d, min(ds.tl_d, min(ds.tr_d, min(ds.bl_d, ds.br_d))))))));
}

float getLinearDepth(float depth, vec2 uv, mat4 inv_proj) {
	vec3 ndc = vec3(uv * 2.0 - 1.0, depth);
	vec4 view = inv_proj * vec4(ndc, 1.0);
	view.xyz /= view.w;
	return -view.z;
}

NeighborDepthSamples getLinearDepthSamples(UVNeighbors uvs, sampler2D depth_tex, mat4 invProjMat) {
	NeighborDepthSamples result;
	result.c_d  = getLinearDepth(texture(depth_tex, uvs.center).r, uvs.center, invProjMat);
	result.l_d  = getLinearDepth(texture(depth_tex, uvs.left).r  , uvs.left  , invProjMat);
	result.r_d  = getLinearDepth(texture(depth_tex, uvs.right).r , uvs.right , invProjMat);
	result.u_d  = getLinearDepth(texture(depth_tex, uvs.up).r    , uvs.up    , invProjMat);
	result.d_d  = getLinearDepth(texture(depth_tex, uvs.down).r  , uvs.down  , invProjMat);
	result.tl_d = getLinearDepth(texture(depth_tex, uvs.top_left).r, uvs.top_left, invProjMat);
	result.tr_d = getLinearDepth(texture(depth_tex, uvs.top_right).r, uvs.top_right, invProjMat);
	result.bl_d = getLinearDepth(texture(depth_tex, uvs.bottom_left).r, uvs.bottom_left, invProjMat);
	result.br_d = getLinearDepth(texture(depth_tex, uvs.bottom_right).r, uvs.bottom_right, invProjMat);
	return result;
}

float remap(float v, float from1, float to1, float from2, float to2) {
	return (v - from1) / (to1 - from1) * (to2 - from2) + from2;
}

float fresnel(float amount, vec3 normal, vec3 view) {
	return pow((1.0 - clamp(dot(normalize(normal), normalize(view)), 0.0, 1.0 )), amount);
}

float getGrazingAngleModulation(vec3 pixel_normal, vec3 view) {
	float x = clamp(((fresnel(grazing_fresnel_power, pixel_normal, view) - 1.0) / grazing_angle_mask_power) + 1.0, 0.0, 1.0);
	return (x + grazing_angle_modulation_factor) + 1.0;
}

float detectEdgesDepth(NeighborDepthSamples depth_samples, vec3 pixel_normal, vec3 view) {
	float n_total = 
		depth_samples.l_d + 
		depth_samples.r_d + 
		depth_samples.u_d + 
		depth_samples.d_d + 
		depth_samples.tl_d + 
		depth_samples.tr_d + 
		depth_samples.bl_d + 
		depth_samples.br_d;
	
	float t = depth_threshold * getGrazingAngleModulation(pixel_normal, view);
	return step(t, n_total - (depth_samples.c_d * 8.0));
}

vec3 reconstructWorldPosition(float depth, mat4 model_view, mat4 inv_proj, vec2 screen_uv, mat4 world, mat4 inv_cam){
  vec4 pos = inverse(model_view) * inv_proj * vec4((screen_uv * 2.0 - 1.0), depth * 2.0 - 1.0, 1.0);
  pos.xyz /= (pos.w + 0.0001 * (1.-abs(sign(pos.w))));
  return (pos * inv_cam).xyz + world[3].xyz;
}

vec3 reconstructWorldNormal(sampler2D depth_tex, mat4 model_view, mat4 inv_proj, vec2 screen_uv, mat4 world, mat4 inv_cam, vec2 viewport_size) {
    vec2 e = vec2(1.0 / viewport_size);
    float c0 = texture(depth_tex, screen_uv                ).r;
    float l2 = texture(depth_tex, screen_uv - vec2(2,0) * e).r;
    float l1 = texture(depth_tex, screen_uv - vec2(1,0) * e).r;
    float r1 = texture(depth_tex, screen_uv + vec2(1,0) * e).r;
    float r2 = texture(depth_tex, screen_uv + vec2(2,0) * e).r;
    float b2 = texture(depth_tex, screen_uv - vec2(0,2) * e).r;
    float b1 = texture(depth_tex, screen_uv - vec2(0,1) * e).r;
    float t1 = texture(depth_tex, screen_uv + vec2(0,1) * e).r;
    float t2 = texture(depth_tex, screen_uv + vec2(0,2) * e).r;
    
    float dl = abs(l1 * l2 / (2.0 * l2 - l1) - c0);
    float dr = abs(r1 * r2 / (2.0 * r2 - r1) - c0);
    float db = abs(b1 * b2 / (2.0 * b2 - b1) - c0);
    float dt = abs(t1 * t2 / (2.0 * t2 - t1) - c0);
    
    vec3 ce = reconstructWorldPosition(c0, model_view, inv_proj, screen_uv, world, inv_cam);

    vec3 dpdx = (dl<dr) ?  ce-reconstructWorldPosition(l1, model_view, inv_proj, screen_uv - vec2(1,0) * e, world, inv_cam) : 
                          -ce+reconstructWorldPosition(r1, model_view, inv_proj, screen_uv + vec2(1,0) * e, world, inv_cam) ;
    vec3 dpdy = (db<dt) ?  ce-reconstructWorldPosition(b1, model_view, inv_proj, screen_uv - vec2(0,1) * e, world, inv_cam) : 
                          -ce+reconstructWorldPosition(t1, model_view, inv_proj, screen_uv + vec2(0,1) * e, world, inv_cam) ;

    return normalize(cross(dpdx,dpdy));
}


float detectEdgesNormalReconstructed(UVNeighbors uvs, sampler2D depth_tex, mat4 model_view, mat4 inv_proj, vec2 screen_uv, mat4 world, mat4 inv_cam, vec2 viewport_size){
	vec3 n_u  = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.up,           world, inv_cam, viewport_size);
	vec3 n_d  = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.down,         world, inv_cam, viewport_size);
	vec3 n_l  = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.left,         world, inv_cam, viewport_size);
	vec3 n_r  = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.right,        world, inv_cam, viewport_size);
	vec3 n_tl = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.top_left,     world, inv_cam, viewport_size);
	vec3 n_tr = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.top_right,    world, inv_cam, viewport_size);
	vec3 n_bl = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.bottom_left,  world, inv_cam, viewport_size);
	vec3 n_br = reconstructWorldNormal(depth_tex, model_view, inv_proj, uvs.bottom_right, world, inv_cam, viewport_size);
	
	vec3 normalFiniteDifference0 = n_tr - n_bl;
	vec3 normalFiniteDifference1 = n_tl - n_br;
	vec3 normalFiniteDifference2 = n_l - n_r;
	vec3 normalFiniteDifference3 = n_u - n_d;
	
	float edgeNormal = sqrt(
		dot(normalFiniteDifference0, normalFiniteDifference0) + 
		dot(normalFiniteDifference1, normalFiniteDifference1) + 
		dot(normalFiniteDifference2, normalFiniteDifference2) + 
		dot(normalFiniteDifference3, normalFiniteDifference3)
	) * 0.5;
	
	return smoothstep(normal_threshold - normal_smoothing, normal_threshold + normal_smoothing, edgeNormal);
}

float detectEdgesNormal(UVNeighbors uvs, sampler2D normTex, vec3 camDirWorld){
	vec3 n_u = texture(normTex, uvs.up).xyz;
	vec3 n_d = texture(normTex, uvs.down).xyz;
	vec3 n_l = texture(normTex, uvs.left).xyz;
	vec3 n_r = texture(normTex, uvs.right).xyz;
	vec3 n_tl = texture(normTex, uvs.top_left).xyz;
	vec3 n_tr = texture(normTex, uvs.top_right).xyz;
	vec3 n_bl = texture(normTex, uvs.bottom_left).xyz;
	vec3 n_br = texture(normTex, uvs.bottom_right).xyz;
	
	vec3 normalFiniteDifference0 = n_tr - n_bl;
	vec3 normalFiniteDifference1 = n_tl - n_br;
	vec3 normalFiniteDifference2 = n_l - n_r;
	vec3 normalFiniteDifference3 = n_u - n_d;
	
	float edgeNormal = sqrt(
		dot(normalFiniteDifference0, normalFiniteDifference0) + 
		dot(normalFiniteDifference1, normalFiniteDifference1) + 
		dot(normalFiniteDifference2, normalFiniteDifference2) + 
		dot(normalFiniteDifference3, normalFiniteDifference3)
	);
	
	return smoothstep(normal_threshold - normal_smoothing, normal_threshold + normal_smoothing, edgeNormal);
}


void vertex() {
	POSITION = vec4(VERTEX, 1.0);
	

    model_view_matrix = INV_PROJECTION_MATRIX * mat4(PROJECTION_MATRIX[0],PROJECTION_MATRIX[1],PROJECTION_MATRIX[2],PROJECTION_MATRIX[3]);

}

void fragment() {
	float aspect = float(VIEWPORT_SIZE.y) / float(VIEWPORT_SIZE.x);
	
	UVNeighbors n = getNeighbors(SCREEN_UV, max_thickness, aspect);
	NeighborDepthSamples depth_samples = getLinearDepthSamples(n, DEPTH_TEXTURE, INV_PROJECTION_MATRIX);
	
	float min_d = getMinimumDepth(depth_samples);
	float thickness = clamp(remap(min_d, min_distance, max_distance, max_thickness, min_thickness), min_thickness, max_thickness);
	float fade_a = clamp(remap(min_d, min_distance, max_distance, 1.0, 0.0), 0.0, 1.0);
	
	n = getNeighbors(SCREEN_UV, thickness, aspect);
	depth_samples = getLinearDepthSamples(n, DEPTH_TEXTURE, INV_PROJECTION_MATRIX);
	

	vec3 pixel_normal = reconstructWorldNormal(DEPTH_TEXTURE, INV_PROJECTION_MATRIX, INV_PROJECTION_MATRIX, SCREEN_UV, INV_PROJECTION_MATRIX, INV_PROJECTION_MATRIX, VIEWPORT_SIZE.xy);

	
	float depthEdges = detectEdgesDepth(depth_samples, pixel_normal, VIEW);
	


	float normEdges = min(detectEdgesNormalReconstructed(n, DEPTH_TEXTURE, model_view_matrix, INV_PROJECTION_MATRIX, SCREEN_UV, INV_PROJECTION_MATRIX, INV_PROJECTION_MATRIX, VIEWPORT_SIZE.xy), 1.0);

	
	ALBEDO.rgb = outlineColor.rgb;
	ALPHA = max(depthEdges, normEdges) * outlineColor.a * fade_a;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/outlineColor = Color( 0, 0, 0, 0.78 )
shader_param/depth_threshold = 0.025
shader_param/normal_threshold = 0.5
shader_param/normal_smoothing = 0.25
shader_param/max_thickness = 1.3
shader_param/min_thickness = 0.5
shader_param/max_distance = 75.0
shader_param/min_distance = 2.0
shader_param/grazing_fresnel_power = 5.0
shader_param/grazing_angle_mask_power = 1.0
shader_param/grazing_angle_modulation_factor = 50.0

[sub_resource type="Theme" id=14]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.270588, 0.172549, 0.172549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.152941, 0.176471, 0.2, 1 )
sky_horizon_color = Color( 0.152941, 0.176471, 0.2, 1 )
ground_bottom_color = Color( 0.152941, 0.176471, 0.2, 1 )
ground_horizon_color = Color( 0.152941, 0.176471, 0.2, 1 )
sun_color = Color( 0.156863, 0.184314, 0.211765, 1 )
sun_latitude = -31.8

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_color = Color( 1, 1, 1, 1 )
tonemap_mode = 2
auto_exposure_scale = 0.25
auto_exposure_max_luma = 0.7
auto_exposure_speed = 30.0
ssao_enabled = true
ssao_quality = 2
dof_blur_far_distance = 30.0
dof_blur_far_transition = 317.06
dof_blur_far_quality = 2
dof_blur_near_quality = 2

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.282353, 0.282353, 0.282353, 0.223529 )

[sub_resource type="ArrayMesh" id=16]
surfaces/0 = {
"aabb": AABB( -0.0557735, -0.0557735, -0.0557735, 0.111547, 0.111557, 0.111557 ),
"array_data": PoolByteArray( 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 61, 0, 0, 127, 64, 0, 0, 0, 0, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 189, 127, 127, 129, 64, 85, 57, 0, 0, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 61, 0, 0, 127, 64, 85, 53, 0, 0, 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 189, 127, 127, 129, 64, 0, 60, 0, 0, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 61, 0, 0, 127, 64, 0, 0, 0, 56, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 189, 127, 127, 129, 64, 85, 57, 0, 56, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 61, 0, 0, 127, 64, 85, 53, 0, 56, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 189, 127, 127, 129, 64, 0, 60, 0, 56, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 61, 127, 0, 127, 127, 85, 53, 0, 0, 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 189, 129, 0, 0, 63, 0, 0, 0, 56, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 189, 127, 0, 127, 127, 85, 57, 0, 0, 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 61, 129, 0, 0, 63, 85, 53, 0, 56, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 61, 127, 0, 127, 127, 85, 53, 0, 56, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 189, 129, 0, 0, 63, 0, 0, 0, 60, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 189, 127, 0, 127, 127, 85, 57, 0, 56, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 61, 129, 0, 0, 63, 85, 53, 0, 60, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 61, 0, 127, 129, 64, 85, 53, 0, 56, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 61, 0, 129, 127, 64, 85, 57, 0, 56, 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 61, 0, 127, 129, 64, 85, 57, 0, 56, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 61, 0, 129, 127, 64, 0, 60, 0, 56, 194, 114, 100, 61, 194, 114, 100, 61, 194, 114, 100, 189, 0, 127, 129, 64, 85, 53, 0, 60, 194, 114, 100, 189, 194, 114, 100, 189, 194, 114, 100, 189, 0, 129, 127, 64, 85, 57, 0, 60, 194, 114, 100, 189, 194, 114, 100, 61, 194, 114, 100, 189, 0, 127, 129, 64, 85, 57, 0, 60, 194, 114, 100, 61, 194, 114, 100, 189, 194, 114, 100, 189, 0, 129, 127, 64, 0, 60, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.0980392 )

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.95, 0.01, 0.95 )

[node name="Editor" type="Spatial"]
script = ExtResource( 3 )

[node name="camera" type="Position3D" parent="."]
script = ExtResource( 1 )

[node name="camera" type="Camera" parent="camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
near = 0.01

[node name="MeshInstance" type="MeshInstance" parent="camera/camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.139213 )
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="model" type="CSGCombiner" parent="."]
use_collision = true
script = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="ui" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )

[node name="left_panel" type="Panel" parent="GUI/ui"]
anchor_bottom = 1.0
margin_right = 179.0

[node name="select_color_container" type="HBoxContainer" parent="GUI/ui/left_panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -58.0
margin_right = 150.0
margin_bottom = -18.0

[node name="color_label" type="Label" parent="GUI/ui/left_panel/select_color_container"]
margin_top = 10.0
margin_right = 44.0
margin_bottom = 29.0
text = "color"

[node name="voxel_color_picker" type="ColorPickerButton" parent="GUI/ui/left_panel/select_color_container"]
margin_left = 48.0
margin_right = 148.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 30 )
color = Color( 0.603922, 0.603922, 0.603922, 1 )

[node name="brush_mode_buttons" type="VBoxContainer" parent="GUI/ui/left_panel"]
anchor_left = 0.592179
anchor_top = 0.185
anchor_right = 0.899441
anchor_bottom = 0.293333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="attach_mode_button" type="Button" parent="GUI/ui/left_panel/brush_mode_buttons"]
margin_right = 55.0
margin_bottom = 19.0
text = "Attach"

[node name="erase_mode_button" type="Button" parent="GUI/ui/left_panel/brush_mode_buttons"]
margin_top = 23.0
margin_right = 55.0
margin_bottom = 42.0
text = "Erase"

[node name="paint_mode_button" type="Button" parent="GUI/ui/left_panel/brush_mode_buttons"]
margin_top = 46.0
margin_right = 55.0
margin_bottom = 65.0
text = "Paint"

[node name="reload_model_button" type="Button" parent="GUI/ui/left_panel"]
anchor_left = 0.0670391
anchor_top = 0.833333
anchor_right = 0.899441
anchor_bottom = 0.891667
text = "Reload model"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="colors_list_panel" type="Panel" parent="GUI/ui/left_panel"]
anchor_left = 0.0782123
anchor_top = 0.356667
anchor_right = 0.932961
anchor_bottom = 0.765
theme = SubResource( 14 )
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="colors_grid" type="GridContainer" parent="GUI/ui/left_panel/colors_list_panel"]
anchor_left = 0.0130719
anchor_right = 1.01307
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 9.0
margin_right = -10.0
margin_bottom = -12.0
columns = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="GUI/ui/left_panel/colors_list_panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.5
margin_top = -18.0
margin_right = 27.5
margin_bottom = 0.5
text = "Colors"
align = 1
valign = 1

[node name="right_panel" type="Panel" parent="GUI/ui"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -202.0

[node name="export_button" type="Button" parent="GUI/ui/right_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -72.0
margin_right = 92.0
margin_bottom = -20.0
text = "Export to obj"

[node name="up_panel" type="Panel" parent="GUI/ui"]
anchor_right = 1.0
margin_bottom = 75.0

[node name="buttons" type="HBoxContainer" parent="GUI/ui/up_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -20.0
margin_right = 38.0
margin_bottom = 20.0

[node name="selectViewMode" type="OptionButton" parent="GUI/ui/up_panel/buttons"]
margin_right = 76.0
margin_bottom = 48.0
text = "Normal"
items = [ "Normal", null, false, 0, null, "Wireframe", null, false, 1, null ]
selected = 0

[node name="is_outline" type="CheckButton" parent="GUI/ui/up_panel/buttons"]
margin_left = 80.0
margin_right = 195.0
margin_bottom = 48.0
text = "Outline"

[node name="workspace_area" type="ColorRect" parent="GUI/ui"]
anchor_left = 0.175781
anchor_top = 0.121667
anchor_right = 0.803711
anchor_bottom = 1.00167
color = Color( 0.270588, 0.270588, 0.270588, 0.054902 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.945861, -0.0732857, 0.316191, 0.0653377, 0.911241, 0.406658, -0.317928, 0.405301, -0.857119, 0, 0.127052, -0.470254 )

[node name="cursor" type="MeshInstance" parent="."]
mesh = SubResource( 9 )
material/0 = SubResource( 8 )

[node name="remove_cursor" type="MeshInstance" parent="."]
mesh = SubResource( 16 )
material/0 = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="remove_cursor"]
visible = false
mesh = SubResource( 17 )

[node name="wireframe" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )
mesh = ExtResource( 5 )
material/0 = SubResource( 10 )

[node name="StaticBody" type="StaticBody" parent="wireframe"]

[node name="CollisionShape" type="CollisionShape" parent="wireframe/StaticBody"]
shape = SubResource( 11 )

[connection signal="popup_closed" from="GUI/ui/left_panel/select_color_container/voxel_color_picker" to="GUI" method="_on_voxel_color_picker_popup_closed"]
[connection signal="pressed" from="GUI/ui/left_panel/brush_mode_buttons/attach_mode_button" to="GUI" method="_on_attach_mode_button_pressed"]
[connection signal="pressed" from="GUI/ui/left_panel/brush_mode_buttons/erase_mode_button" to="GUI" method="_on_erase_mode_button_pressed"]
[connection signal="pressed" from="GUI/ui/left_panel/brush_mode_buttons/paint_mode_button" to="GUI" method="_on_paint_mode_button_pressed"]
[connection signal="pressed" from="GUI/ui/left_panel/reload_model_button" to="GUI" method="_on_reload_model_button_pressed"]
[connection signal="pressed" from="GUI/ui/right_panel/export_button" to="model" method="exportcsg"]
[connection signal="item_selected" from="GUI/ui/up_panel/buttons/selectViewMode" to="GUI" method="_on_selectViewMode_item_selected"]
[connection signal="toggled" from="GUI/ui/up_panel/buttons/is_outline" to="GUI" method="_on_is_outline_toggled"]
[connection signal="mouse_entered" from="GUI/ui/workspace_area" to="GUI" method="_on_workspace_area_mouse_entered"]
[connection signal="mouse_exited" from="GUI/ui/workspace_area" to="GUI" method="_on_workspace_area_mouse_exited"]
